--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <div class="container ">
           <div>
             <img class="width_du_an" src="./images/project_1.png" alt="Dự án 1" />
-            <div class="title_p"><a href="https://dinhdon.github.io/WebBanGiay/">WEB BÁN GIẦY</a></div>
+            <div class="title_p"><a href="https://dinhdon.github.io/BanGiay/" target="_blank" >WEB BÁN GIẦY</a></div>
             <div class="container_new">
               <p class="color_new">2021</p>
               <p>
@@ -346,7 +346,7 @@
           </div>
           <div>
             <img class="width_du_an" src="./images/project_2.png" alt="Dự án 2" />
-            <div class="title_p"><a href="https://dinhdon.github.io/ThuCung/">TRANG WEB QUẢN LÝ THÚ CƯNG</a></div>
+            <div class="title_p"><a href="https://dinhdon.github.io/ThuCung/" target="_blank" >TRANG WEB QUẢN LÝ THÚ CƯNG</a></div>
             <div class="container_new">
               <p class="color_new">2021</p>
               <p>
@@ -382,7 +382,7 @@
           </div>
           <div>
             <img class="width_du_an" src="./images/project_3.png" alt="Dự án 3"  />
-            <div class="title_p"><a href="https://dinhdon.github.io/TinTuc/">TRANG WEB XEM TIN TỨC</a></div>
+            <div class="title_p"><a href="https://dinhdon.github.io/TinTuc/" target="_blank" >TRANG WEB XEM TIN TỨC</a></div>
             <div class="container_new">
               <p class="color_new">2021</p>
               <p>
